feat: GetCourseGroupV3 api and search course_group by code
