# internal/handler/course_group.go
@@ -38,6 +38,7 @@ func (h *courseGroupHandler) RegisterRoute(router fiber.Router) {
 
 	// v3
 	router.Get("/v3/course_groups/search", h.SearchCourseGroupV3)
+	router.Get("/v3/course_groups/:id<int>", h.GetCourseGroupV3)
 
 	// static
 	router.Get("/static/cedict_ts.u8", func(c *fiber.Ctx) error {
@@ -163,6 +164,39 @@ func (h *courseGroupHandler) SearchCourseGroupV3(c *fiber.Ctx) (err error) {
 	}
 
 	response, err := h.courseGroupService.SearchCourseGroupV3(c.Context(), user, request)
+	if err != nil {
+		return
+	}
+
+	return c.JSON(response)
+}
+
+// GetCourseGroupV3 godoc
+// @Summary /v3/course_groups/{group_id}
+// @Description get a course group, v3 version
+// @Tags CourseGroup
+// @Accept json
+// @Produce json
+// @Router /v3/course_groups/{id} [get]
+// @Param id path string true "course group id"
+// @Success 200 {object} schema.CourseGroupV3Response
+// @Failure 400 {object} schema.HttpError
+// @Failure 404 {object} schema.HttpBaseError
+// @Failure 500 {object} schema.HttpBaseError
+func (h *courseGroupHandler) GetCourseGroupV3(c *fiber.Ctx) (err error) {
+	c.Context().SetUserValue("FiberCtx", c)
+
+	user, err := h.accountRepository.GetCurrentUser(c.Context())
+	if err != nil {
+		return
+	}
+
+	groupID, err := c.ParamsInt("id")
+	if err != nil {
+		return
+	}
+
+	response, err := h.courseGroupService.GetGroupByIDV3(c.Context(), user, groupID)
 	if err != nil {
 		return
 	}
